fix: test list products should return